grid style fix, experiments with SSQL